Fix random white space caused by word form margin

--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -2,7 +2,8 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  padding: 20px;
+  margin-top: 0;
   font-size: 2rem;
 }
 .word-input{
